syntax = "proto3";

import "scalapb/scalapb.proto";
import "google/protobuf/wrappers.proto";

package com.domain.users.pb;

message FriendPB {
    int32 id = 1;
    string name = 2;
}

message TypePB {
    string id = 1;
    int32 index = 2;
    string guid = 3;
    bool isActive = 4;
    string balance = 5;
    string picture = 6;
    int32 age = 7;
    string eyeColor = 8;
    string name = 9;
    string gender = 10;
    google.protobuf.StringValue company = 11;
    google.protobuf.StringValue email = 12;
    google.protobuf.StringValue phone = 13;
    string address = 14;
    string about = 15;
    string registered = 16;
    double latitude = 17;
    double longitude = 18;
    repeated string tags = 19;
    repeated FriendPB friends = 20;
    string greeting = 21;
    string favoriteFruit = 22;
}